scroller overflow issue in x-axis resolved

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ video {
 
 #main {
   position: relative;
-  background-color: rgba(0, 0, 0, 0.35);
+  background-color: rgba(0, 0, 0, 0.473);
 }
 
 #page1 {
@@ -116,14 +116,17 @@ video {
 
 #scroller {
   white-space: nowrap;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: hidden;
-  animation-name: scroll;
-  animation-duration: 20s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
   position: relative;
   z-index: 10;
+}
+
+#scroller-in {
+  animation-name: scroll;
+  animation-duration: 14s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
 #scroller::-webkit-scrollbar {
@@ -133,9 +136,6 @@ video {
 #scroller h4 {
   display: inline-block;
   white-space: nowrap;
-}
-
-#scroller-in h4 {
   font-size: 100px;
   font-weight: 700;
   margin-right: 10px;
@@ -235,8 +235,8 @@ video {
 }
 
 .overlay h4 {
-  color: #000;
-  font-size: 30px;
+  color: white;
+  font-size: 35px;
   font-weight: 700;
   padding-bottom: 10px;
 }
@@ -256,7 +256,7 @@ video {
 }
 
 #green-div {
-  height: 40vh;
+  height: 30vh;
   width: 100%;
   margin-top: 3%;
   display: flex;
@@ -265,27 +265,28 @@ video {
   text-align: center;
   background-color: #95c11e;
   position: relative;
+  overflow: hidden;
 }
 
 #green-div h4 {
-  font-size: 40px;
+  font-size: 30px;
   color: #000;
   text-transform: uppercase;
 }
 
 #green-div img {
   height: 100%;
-  width: 20%;
+  width: 18%;
   object-fit: cover;
 }
 
 #green-div-img-1 {
   transform: scaleX(-1);
   position: relative;
-  right: 10%;
+  right: 9%;
 }
 
 #green-div-img-2 {
   position: relative;
-  right: -10%;
+  right: -9%;
 }
